fixed alignedment prob for mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,3 +7,8 @@
 .half-tab {
   width: 50vw;
 }
+
+.form-width {
+  width: 90vw;
+  margin: auto;
+}
