--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -5,3 +5,7 @@
 .content-centered {
   text-align: center;
 }
+
+.url-width {
+  width: 40vw;
+}
